src/objects/PS_ASU_SP_GCPETV__x.object
<CustomObject>
    <fields>
        <fullName>ACAD_CAREER__c</fullName>
        <description>Data sourced from PS_ASU_AA_POS_PETN.ACAD_CAREER</description>
        <externalDeveloperName>ACAD_CAREER</externalDeveloperName>
        <label>Career</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACAD_PLAN__c</fullName>
        <description>Data sourced from PS_ASU_AA_POS_PETN.ACAD_PLAN</description>
        <externalDeveloperName>ACAD_PLAN</externalDeveloperName>
        <label>Academic Plan</label>
        <length>25</length>
        <referenceTargetField>Plan__c.Plan_Code__c</referenceTargetField>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Graduate Petition Status (external)</relationshipLabel>
        <relationshipName>Graduate_Petition_Status_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>DESCRFORMAL__c</fullName>
        <description>Data sourced from PS_MLSTN_LVL_TBL.DESCRFORMAL</description>
        <externalDeveloperName>DESCRFORMAL</externalDeveloperName>
        <label>Milestone Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLID__c</fullName>
        <description>Data sourced from PS_ASU_AA_POS_PETN.EMPLID</description>
        <externalDeveloperName>EMPLID</externalDeveloperName>
        <label>Contact</label>
        <length>10</length>
        <referenceTargetField>Contact.EMPLID__c</referenceTargetField>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Graduate Petition Status (external)</relationshipLabel>
        <relationshipName>Graduate_Petition_Status_external</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>MILESTONE_TITLE__c</fullName>
        <externalDeveloperName>MILESTONE_TITLE</externalDeveloperName>
        <label>Milestone Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MILESTONE__c</fullName>
        <description>Data sourced from PS_ASU_AA_POS_PETN.MILESTONE</description>
        <externalDeveloperName>MILESTONE</externalDeveloperName>
        <label>Milestone Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STDNT_CAR_NBR__c</fullName>
        <description>Data sourced from PS_ASU_AA_POS_PETN.STDNT_CAR_NBR</description>
        <externalDeveloperName>STDNT_CAR_NBR</externalDeveloperName>
        <label>Student Career Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <description>Data source script can be found here: https://docs.google.com/document/d/1rftZ9eBOdeMvx5pEPm6ePGNEBdMt5RmS4isepY3vt6Y/edit</description>
    <externalDataSource>asu_ps_lightning</externalDataSource>
    <externalName>PS_ASU_SP_GCPETV</externalName>
    <label>Graduate Petition Status (external)</label>
    <pluralLabel>Graduate Petition Status (external)</pluralLabel>
</CustomObject>